fixing display of popup buttons on small screen

--- a/style.css
+++ b/style.css
@@ -162,7 +162,7 @@ a:hover {
 
 #profile-skills ul {
     color: var(--paragraph-color-1);
-    
+
 }
 
 #about-page div {
@@ -285,11 +285,12 @@ a:hover {
 
 .project-details {
     position: fixed;
+    width: 80%;
     max-width: 750px;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    padding: 10px;
+    padding: 10px 10px 0 10px;
 
     background-color: var(--background-color-2);
     /* box-shadow: 0 0 5px white; */
@@ -315,9 +316,11 @@ a:hover {
 }
 
 .project-details a {
+    display: block;
     color: white;
     background-color: gray;
     margin-right: 10px;
+    margin-bottom: 10px;
     padding: 5px 10px;
     border-radius: 2px;
 }
@@ -325,6 +328,9 @@ a:hover {
 .project-links {
     margin: 10px;
     margin-top: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: left;
 }
 
 .hidden {
